Implement text-to-language #109

--- a/ordia/app/templates/base.html
+++ b/ordia/app/templates/base.html
@@ -81,8 +81,19 @@
 	    </div>
 	    
 	    <li class="nav-item">
-		<a class="nav-link" href="{{ url_for('app.show_text_to_lexemes') }}">Text to lexemes</a>
+		<a class="nav-link" data-toggle="collapse" data-target="#nav-tools">Tools</a>
 	    </li>
+
+	    <div id="nav-tools" class="collapse">
+		<ul class="nav navbar-nav">
+		  <li class="nav-item">
+		    <a class="nav-link" href="{{ url_for('app.show_text_to_lexemes') }}">Text to lexemes</a>
+		  </li>
+		  <li>
+		    <a class="nav-link" href="{{ url_for('app.show_text_to_languages') }}">Text to languages</a>
+		  </li>
+		</ul>
+	    </div>
 	    
 	    <li class="nav-item">
 		<a class="nav-link" data-toggle="collapse" data-target="#nav-examples">Examples</a>
