Fix #117 showing multiple 'described in' Now a DISTINCT across all results fix multiple displays of 'described in' in lexeme aspect

--- a/ordia/app/templates/l.html
+++ b/ordia/app/templates/l.html
@@ -7,7 +7,7 @@
 <script type="text/javascript">
  lexemeSparql = `
 # Data for a specific lexeme
-SELECT
+SELECT DISTINCT
   ?description
   (?valueLabel AS ?value_) ?value_Url
   ?source ?sourceUrl
