--- a/ordia/app/templates/base.html
+++ b/ordia/app/templates/base.html
@@ -69,6 +69,9 @@
 			<a class="nav-link" href="{{ url_for('app.show_grammatical_feature_index') }}">Grammatical features</a>
 		    </li>
 		    <li class="nav-item">
+			<a class="nav-link" href="{{ url_for('app.show_numeral_index') }}">Numerals</a>
+		    </li>
+		    <li class="nav-item">
 			<a class="nav-link" href="{{ url_for('app.show_property_index') }}">Properties</a>
 		    </li>
 		    <li class="nav-item">
@@ -86,12 +89,12 @@
 
 	    <div id="nav-tools" class="collapse">
 		<ul class="nav navbar-nav">
-		  <li class="nav-item">
-		    <a class="nav-link" href="{{ url_for('app.show_text_to_lexemes') }}">Text to lexemes</a>
-		  </li>
-		  <li>
-		    <a class="nav-link" href="{{ url_for('app.show_text_to_languages') }}">Text to languages</a>
-		  </li>
+		    <li class="nav-item">
+			<a class="nav-link" href="{{ url_for('app.show_text_to_lexemes') }}">Text to lexemes</a>
+		    </li>
+		    <li>
+			<a class="nav-link" href="{{ url_for('app.show_text_to_languages') }}">Text to languages</a>
+		    </li>
 		</ul>
 	    </div>
 	    
