--- a/ordia/app/templates/base.html
+++ b/ordia/app/templates/base.html
@@ -105,10 +105,10 @@
 	    <div id="nav-examples" class="collapse">
 		<ul class="nav navbar-nav">
 		    <li class="nav-item">
-			<a class="nav-link" href="{{ url_for('app.show_l', l='L99') }}">Example lemma L99 (Luftballon)</a>
+			<a class="nav-link" href="{{ url_for('app.show_l', lexeme='L99') }}">Example lemma L99 (Luftballon)</a>
 		    </li>
 		    <li class="nav-item">
-			<a class="nav-link" href="{{ url_for('app.show_lf', l='L128', f='F3') }}">Example form L128-F3 (vovserne)</a>
+			<a class="nav-link" href="{{ url_for('app.show_lf', lexeme='L128', f='F3') }}">Example form L128-F3 (vovserne)</a>
 		    </li>
 		</ul>
 	    </div>
