Added options to select Estonian and Finnish languages

--- a/ordia/app/templates/text_to_lexemes.html
+++ b/ordia/app/templates/text_to_lexemes.html
@@ -101,8 +101,10 @@ ORDER BY ?word
  	  <option value="en"{% if text_language == 'en' %} selected="selected"{% endif %}>English - en - English</option>
  	  <option value="eo"{% if text_language == 'eo' %} selected="selected"{% endif %}>Esperanto - eo - Esperanto</option>
  	  <option value="es"{% if text_language == 'es' %} selected="selected"{% endif %}>Español - es - Spanish</option>
+ 	  <option value="et"{% if text_language == 'et' %} selected="selected"{% endif %}>Eesti - et - Estonian</option>
  	  <option value="eu"{% if text_language == 'eu' %} selected="selected"{% endif %}>Euskara - eu - Basque</option>
 	  <option value="fa"{% if text_language == 'fa' %} selected="selected"{% endif %}>فارسی - fa - Persian</option>
+	  <option value="fi"{% if text_language == 'fi' %} selected="selected"{% endif %}>Suomen - fi - Finnish</option>
 	  <option value="fr"{% if text_language == 'fr' %} selected="selected"{% endif %}>Français - fr - French</option>
 	  <option value="gu"{% if text_language == 'gu' %} selected="selected"{% endif %}>ગુજરાતી - gu - Gujarati</option>
 	  <option value="hi"{% if text_language == 'hi' %} selected="selected"{% endif %}>हिन्दी - hi - Hindi</option>
