Added Swedish SAOB P8478 to templates/statistics.html
P8478 = Svenska Akademiens Ordbok ID

--- a/ordia/app/templates/statistics.html
+++ b/ordia/app/templates/statistics.html
@@ -252,6 +252,22 @@ WHERE {
     BIND("../property/P6838" AS ?descriptionUrl)
     BIND("[] wdt:P6838 []" AS ?query)
   }
+  UNION
+  {
+    { SELECT (COUNT(*) AS ?count) { [] wdt:P6838 [] . } }
+    wd:P6838 rdfs:label ?description .
+    FILTER (LANG(?description) = 'en')
+    BIND("../property/P6838" AS ?descriptionUrl)
+    BIND("[] wdt:P6838 []" AS ?query)
+  }
+  UNION
+  {
+    { SELECT (COUNT(*) AS ?count) { [] wdt:P8478 [] . } }
+    wd:P6838 rdfs:label ?description .
+    FILTER (LANG(?description) = 'en')
+    BIND("../property/P8478" AS ?descriptionUrl)
+    BIND("[] wdt:P8478 []" AS ?query)
+  }  
 }
 ORDER BY DESC(?count)
 `
