Change index and menu Home menu item is now removed #127

--- a/ordia/app/templates/index.html
+++ b/ordia/app/templates/index.html
@@ -67,6 +67,14 @@
 			<a href="text-to-lexemes?text=Regeringen%20spiser%20gr%C3%B8nne%20%C3%A6bler%20om%20vinteren&text-language=da">Danish example</a> and
 			<a href="text-to-lexemes?text=Cars,%20bikes%20and%20motorcycles%20must%20stop%20at%20the%20crossing&text-language=en">English example</a>.</dd>
 		</dl>
+
+		<dl>
+		    <dt><a href="text-to-languages">Text-to-language</a></dt>
+		    <dd>Count number of matched words across language, &mdash; a form of simple language detection:
+			<a href="text-to-languages?text=To murer lo i nat med en banan">Example</a> and
+			<a href="text-to-languages?text=to go or not to go">another example</a>.</dd>
+		</dl>
+
 	    </div>
         </div>
 	
@@ -80,6 +88,12 @@
 		    <dd>Count of Wikidata lexemes data.</dd>
 		</dl>
 
+		<dl>
+		    <dt><a href="https://orbit.dtu.dk/files/203180728/imm7137.pdf">Ordia: A Web Application for Wikidata Lexemes ↗</a></dt>
+		    <dd>Paper about this web application.</dd>
+
+
+		
 	    </div>
         </div>
     </div>
