Fix typo in example

--- a/ordia/app/templates/index.html
+++ b/ordia/app/templates/index.html
@@ -71,7 +71,7 @@
 		<dl>
 		    <dt><a href="text-to-languages">Text-to-language</a></dt>
 		    <dd>Count number of matched words across language, &mdash; a form of simple language detection:
-			<a href="text-to-languages?text=To murer lo i nat med en banan">Example</a> and
+			<a href="text-to-languages?text=To murere lo i nat med en banan">Example</a> and
 			<a href="text-to-languages?text=to go or not to go">another example</a>.</dd>
 		</dl>
 
