Partially fix #132: Add zh-Chinese
zh-Chinese is added to the text-to-lexeme drop-down menu.
Chinese tokenization is still not implemented.
No other Chinese languages are added.

--- a/ordia/app/templates/text_to_lexemes.html
+++ b/ordia/app/templates/text_to_lexemes.html
@@ -144,6 +144,7 @@ ORDER BY ?word
 	  <option value="ur"{% if text_language == 'ur' %} selected="selected"{% endif %}>اُردُو - ur - Urdu</option>
 	  <option value="uz"{% if text_language == 'uz' %} selected="selected"{% endif %}>Oʻzbekcha - uz - Uzbek</option>
 	  <option value="vi"{% if text_language == 'vi' %} selected="selected"{% endif %}>Tiếng Việt - vi - Vietnamese</option>
+	  <option value="zh"{% if text_language == 'zh' %} selected="selected"{% endif %}>汉语 - zh - Chinese</option>
 	</select>
       </div>
       
