--- a/ordia/app/templates/l.html
+++ b/ordia/app/templates/l.html
@@ -91,8 +91,18 @@ WHERE {
   }
   UNION 
   {
-    # Derived from
+    # Characterized by
     BIND(13 AS ?order)
+    BIND("Characterized by" AS ?description)
+    wd:{{ l }} wdt:P1552 ?value .
+    ?value rdfs:label ?valueLabel .
+    FILTER (LANG(?valueLabel) = "en")
+    BIND(CONCAT("property/P1552/value/", SUBSTR(STR(?value), 32))  AS ?value_Url)
+  }
+  UNION 
+  {
+    # Derived from
+    BIND(14 AS ?order)
     BIND("Derived from" AS ?description)
     OPTIONAL {
      ?lexeme wdt:P5191 ?value .
@@ -103,7 +113,7 @@ WHERE {
   UNION 
   {
     # Homographs
-    BIND(14 AS ?order)
+    BIND(15 AS ?order)
     BIND("Homographs" AS ?description)
     wd:{{ l }} wdt:P5402 ?value .
     ?value wikibase:lemma ?valueLabel .
@@ -111,7 +121,7 @@ WHERE {
   }
   UNION 
   {
-    BIND(15 AS ?order)
+    BIND(18 AS ?order)
     BIND("Compound" AS ?description)
     wd:{{ l }} wdt:P5238+ ?value .
     ?value wikibase:lemma ?valueLabel .
