Add Ukrainian to text-to-lexemes

--- a/ordia/app/templates/text_to_lexemes.html
+++ b/ordia/app/templates/text_to_lexemes.html
@@ -141,6 +141,7 @@ ORDER BY ?word
 	  <option value="tg"{% if text_language == 'tg' %} selected="selected"{% endif %}>Тоҷикӣ - tg - Tajik</option>
 	  <option value="tk"{% if text_language == 'tk' %} selected="selected"{% endif %}>Türkmençe - tk - Turkmen</option>
 	  <option value="ug"{% if text_language == 'ug' %} selected="selected"{% endif %}>ئۇيغۇرچە - ug - Uyghur</option>
+	  <option value="uk"{% if text_language == 'uk' %} selected="selected"{% endif %}>Українська - uk - Ukrainian</option>
 	  <option value="ur"{% if text_language == 'ur' %} selected="selected"{% endif %}>اُردُو - ur - Urdu</option>
 	  <option value="uz"{% if text_language == 'uz' %} selected="selected"{% endif %}>Oʻzbekcha - uz - Uzbek</option>
 	  <option value="vi"{% if text_language == 'vi' %} selected="selected"{% endif %}>Tiếng Việt - vi - Vietnamese</option>
