adjusting srsearch string in wiktionarySparql

--- a/ordia/app/templates/lf.html
+++ b/ordia/app/templates/lf.html
@@ -193,7 +193,7 @@ LIMIT 50
   SERVICE wikibase:mwapi {
       bd:serviceParam wikibase:api "Search" .
       bd:serviceParam wikibase:endpoint "{{ iso639 }}.wiktionary.org" .
-      bd:serviceParam mwapi:srsearch "{{ representation }}" .
+      bd:serviceParam mwapi:srsearch "\\"{{ representation }}\\"" .
       bd:serviceParam mwapi:language "{{ iso639 }}" .
       ?title wikibase:apiOutput mwapi:title .
       ?snippet_ wikibase:apiOutput "@snippet" .
