Fix #160 quote on search in wikiquote
Making the search on Wikiquote on the representation narrower
by quoting the representation

--- a/ordia/app/templates/lf.html
+++ b/ordia/app/templates/lf.html
@@ -210,7 +210,7 @@ LIMIT 200
   SERVICE wikibase:mwapi {
       bd:serviceParam wikibase:api "Search" .
       bd:serviceParam wikibase:endpoint "{{ iso639 }}.wikiquote.org" .
-      bd:serviceParam mwapi:srsearch "{{ representation }}" .
+      bd:serviceParam mwapi:srsearch "\\"{{ representation }}\\"" .
       bd:serviceParam mwapi:language "{{ iso639 }}" .
       ?title wikibase:apiOutput mwapi:title .
       ?snippet_ wikibase:apiOutput "@snippet" .
