Fix #164 source to gloss-quote

--- a/ordia/app/templates/ls.html
+++ b/ordia/app/templates/ls.html
@@ -52,13 +52,20 @@ WHERE {
   {
     BIND(5 AS ?order)
     BIND("Gloss quote" AS ?description)
-    ?sense wdt:P8394 ?value_ . 
+    ?sense p:P8394 ?value_statement .
+    ?value_statement ps:P8394 ?value_ . 
     BIND(LANG(?value_) AS ?language_code)
     BIND(CONCAT(?value_, " (", LANG(?value_), ")") AS ?value)
     BIND(CONCAT("./text-to-lexemes?text-language=",
       ENCODE_FOR_URI(?language_code),
         "&text=",
    	ENCODE_FOR_URI(?value_)) AS ?valueUrl)
+    OPTIONAL {
+      ?value_statement prov:wasDerivedFrom / pr:P248 ?source_ .
+      ?source_ rdfs:label ?source .
+      FILTER (LANG(?source) = 'en')
+      BIND(CONCAT("reference/", SUBSTR(STR(?source_), 32))  AS ?sourceUrl)
+    }
   }  
   UNION
   {
