Fix #169 add Faroese to text-to-lexeme

--- a/ordia/app/templates/text_to_lexemes.html
+++ b/ordia/app/templates/text_to_lexemes.html
@@ -105,6 +105,7 @@ ORDER BY ?word
  	  <option value="eu"{% if text_language == 'eu' %} selected="selected"{% endif %}>Euskara - eu - Basque</option>
 	  <option value="fa"{% if text_language == 'fa' %} selected="selected"{% endif %}>فارسی - fa - Persian</option>
 	  <option value="fi"{% if text_language == 'fi' %} selected="selected"{% endif %}>Suomen - fi - Finnish</option>
+	  <option value="fo"{% if text_language == 'fo' %} selected="selected"{% endif %}>Føroyskt - fo - Faroese</option>
 	  <option value="fr"{% if text_language == 'fr' %} selected="selected"{% endif %}>Français - fr - French</option>
 	  <option value="gu"{% if text_language == 'gu' %} selected="selected"{% endif %}>ગુજરાતી - gu - Gujarati</option>
 	  <option value="hi"{% if text_language == 'hi' %} selected="selected"{% endif %}>हिन्दी - hi - Hindi</option>
