--- a/ordia/app/templates/base.html
+++ b/ordia/app/templates/base.html
@@ -31,6 +31,7 @@
 	<div class="input-group">
             <input type="text" class="form-control"
 		   name="q" id="searchterm" value="{{ query }}"
+		   autofocus
 		   placeholder="Search after lemma or form"/>
             <span class="input-group-btn">
 		<button class="btn btn-primary" type="submit">
